// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormRadio Input test match last snapshot of <FormRadio /> 1`] = `
.c2 {
  display: block;
  color: #272727;
  font-size: 1rem;
  font-family: "Gentona","Montserrat";
}

.c2:hover {
  cursor: pointer;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-shadow: none;
  border: 2px solid #0B466B;
  outline: none;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 50%;
  -webkit-transition: 0.3s ease all;
  transition: 0.3s ease all;
}

.c1:hover {
  border-color: #05263B;
  cursor: pointer;
}

.c1:focus,
.c1:checked,
.c1:active {
  border-color: #05263B;
  background-color: #05263B;
}

.c1:focus + label,
.c1:checked + label,
.c1:active + label {
  font-weight: bold;
  color: #05263B;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: no-wrap;
  -ms-flex-wrap: no-wrap;
  flex-wrap: no-wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > input {
  margin-bottom: 0.5rem;
}

<FormRadio>
  <Container>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "FormRadio__Container-sc-16fxvar-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "display:flex;flex-wrap:no-wrap;flex-direction:",
              [Function],
              ";justify-content:center;align-items:center;> input{",
              [Function],
              "}",
            ],
          },
          "displayName": "Container",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "FormRadio__Container-sc-16fxvar-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <Radio>
          <StyledRadio
            theme={
              Object {
                "action": Object {
                  "dark": Object {
                    "RGB": "79,38,98",
                    "hex": "#4E2662",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "173,101,207",
                    "hex": "#AD65CF",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "116,60,143",
                    "hex": "#743C8F",
                    "on": "#FFFFFF",
                  },
                },
                "background": Object {
                  "RGB": "246,246,246",
                  "hex": "#F6F6F6",
                },
                "black": Object {
                  "main": Object {
                    "RGB": "39,39,39",
                    "hex": "#272727",
                    "on": "#FFFFFF",
                  },
                  "tint20": Object {
                    "RGB": "236,236,236",
                    "hex": "#ECECEC",
                    "on": "#272727",
                  },
                  "tint40": Object {
                    "RGB": "199,199,199",
                    "hex": "#C7C7C7",
                    "on": "#272727",
                  },
                  "tint60": Object {
                    "RGB": "160,160,160",
                    "hex": "#A0A0A0",
                    "on": "#FFFFFF",
                  },
                  "tint80": Object {
                    "RGB": "105,105,105",
                    "hex": "#696969",
                    "on": "#FFFFFF",
                  },
                },
                "complimentary": Object {
                  "dark": Object {
                    "RGB": "206,185,0",
                    "hex": "#CEB900",
                    "on": "#272727",
                  },
                  "light": Object {
                    "RGB": "255,245,157",
                    "hex": "#FFF59D",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "255,238,82",
                    "hex": "#FFEE52",
                    "on": "#272727",
                  },
                },
                "error": Object {
                  "dark": Object {
                    "RGB": "197,73,1",
                    "hex": "#C54901",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "255,115,32",
                    "hex": "#FF7320",
                    "on": "#FFFFFF",
                  },
                },
                "primary": Object {
                  "dark": Object {
                    "RGB": "102,22,20",
                    "hex": "#661614",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "218,52,47",
                    "hex": "#DA342F",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "164,40,36",
                    "hex": "#A42824",
                    "on": "#FFFFFF",
                  },
                },
                "secondary": Object {
                  "dark": Object {
                    "RGB": "5,38,59",
                    "hex": "#05263B",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "89,156,175",
                    "hex": "#599CAF",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "11,70,107",
                    "hex": "#0B466B",
                    "on": "#FFFFFF",
                  },
                },
                "surface": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
                "white": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
              }
            }
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "_foldedDefaultProps": Object {
                    "theme": Object {
                      "action": Object {
                        "dark": Object {
                          "RGB": "79,38,98",
                          "hex": "#4E2662",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "173,101,207",
                          "hex": "#AD65CF",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "116,60,143",
                          "hex": "#743C8F",
                          "on": "#FFFFFF",
                        },
                      },
                      "background": Object {
                        "RGB": "246,246,246",
                        "hex": "#F6F6F6",
                      },
                      "black": Object {
                        "main": Object {
                          "RGB": "39,39,39",
                          "hex": "#272727",
                          "on": "#FFFFFF",
                        },
                        "tint20": Object {
                          "RGB": "236,236,236",
                          "hex": "#ECECEC",
                          "on": "#272727",
                        },
                        "tint40": Object {
                          "RGB": "199,199,199",
                          "hex": "#C7C7C7",
                          "on": "#272727",
                        },
                        "tint60": Object {
                          "RGB": "160,160,160",
                          "hex": "#A0A0A0",
                          "on": "#FFFFFF",
                        },
                        "tint80": Object {
                          "RGB": "105,105,105",
                          "hex": "#696969",
                          "on": "#FFFFFF",
                        },
                      },
                      "complimentary": Object {
                        "dark": Object {
                          "RGB": "206,185,0",
                          "hex": "#CEB900",
                          "on": "#272727",
                        },
                        "light": Object {
                          "RGB": "255,245,157",
                          "hex": "#FFF59D",
                          "on": "#272727",
                        },
                        "main": Object {
                          "RGB": "255,238,82",
                          "hex": "#FFEE52",
                          "on": "#272727",
                        },
                      },
                      "error": Object {
                        "dark": Object {
                          "RGB": "197,73,1",
                          "hex": "#C54901",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "255,115,32",
                          "hex": "#FF7320",
                          "on": "#FFFFFF",
                        },
                      },
                      "primary": Object {
                        "dark": Object {
                          "RGB": "102,22,20",
                          "hex": "#661614",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "218,52,47",
                          "hex": "#DA342F",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "164,40,36",
                          "hex": "#A42824",
                          "on": "#FFFFFF",
                        },
                      },
                      "secondary": Object {
                        "dark": Object {
                          "RGB": "5,38,59",
                          "hex": "#05263B",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "89,156,175",
                          "hex": "#599CAF",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "11,70,107",
                          "hex": "#0B466B",
                          "on": "#FFFFFF",
                        },
                      },
                      "surface": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                      "white": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                    },
                  },
                  "attrs": Array [
                    Object {
                      "type": "radio",
                    },
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "Radio__StyledRadio-sc-1037grk-0",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      "appearance:none;box-shadow:none;border:2px solid ",
                      [Function],
                      ";outline:none;width:1.5rem;height:1.5rem;border-radius:50%;transition:0.3s ease all;:hover{border-color:",
                      [Function],
                      ";cursor:pointer;}:focus,:checked,:active{border-color:",
                      [Function],
                      ";background-color:",
                      [Function],
                      ";+ label{font-weight:bold;color:",
                      [Function],
                      ";}}",
                    ],
                  },
                  "displayName": "StyledRadio",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Radio__StyledRadio-sc-1037grk-0",
                  "target": "input",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              theme={
                Object {
                  "action": Object {
                    "dark": Object {
                      "RGB": "79,38,98",
                      "hex": "#4E2662",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "173,101,207",
                      "hex": "#AD65CF",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "116,60,143",
                      "hex": "#743C8F",
                      "on": "#FFFFFF",
                    },
                  },
                  "background": Object {
                    "RGB": "246,246,246",
                    "hex": "#F6F6F6",
                  },
                  "black": Object {
                    "main": Object {
                      "RGB": "39,39,39",
                      "hex": "#272727",
                      "on": "#FFFFFF",
                    },
                    "tint20": Object {
                      "RGB": "236,236,236",
                      "hex": "#ECECEC",
                      "on": "#272727",
                    },
                    "tint40": Object {
                      "RGB": "199,199,199",
                      "hex": "#C7C7C7",
                      "on": "#272727",
                    },
                    "tint60": Object {
                      "RGB": "160,160,160",
                      "hex": "#A0A0A0",
                      "on": "#FFFFFF",
                    },
                    "tint80": Object {
                      "RGB": "105,105,105",
                      "hex": "#696969",
                      "on": "#FFFFFF",
                    },
                  },
                  "complimentary": Object {
                    "dark": Object {
                      "RGB": "206,185,0",
                      "hex": "#CEB900",
                      "on": "#272727",
                    },
                    "light": Object {
                      "RGB": "255,245,157",
                      "hex": "#FFF59D",
                      "on": "#272727",
                    },
                    "main": Object {
                      "RGB": "255,238,82",
                      "hex": "#FFEE52",
                      "on": "#272727",
                    },
                  },
                  "error": Object {
                    "dark": Object {
                      "RGB": "197,73,1",
                      "hex": "#C54901",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "255,115,32",
                      "hex": "#FF7320",
                      "on": "#FFFFFF",
                    },
                  },
                  "primary": Object {
                    "dark": Object {
                      "RGB": "102,22,20",
                      "hex": "#661614",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "218,52,47",
                      "hex": "#DA342F",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "164,40,36",
                      "hex": "#A42824",
                      "on": "#FFFFFF",
                    },
                  },
                  "secondary": Object {
                    "dark": Object {
                      "RGB": "5,38,59",
                      "hex": "#05263B",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "89,156,175",
                      "hex": "#599CAF",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "11,70,107",
                      "hex": "#0B466B",
                      "on": "#FFFFFF",
                    },
                  },
                  "surface": Object {
                    "RGB": "255,255,255",
                    "hex": "#FFFFFF",
                    "on": "#272727",
                  },
                  "white": Object {
                    "RGB": "255,255,255",
                    "hex": "#FFFFFF",
                    "on": "#272727",
                  },
                }
              }
            >
              <input
                className="c1"
                type="radio"
              />
            </StyledComponent>
          </StyledRadio>
        </Radio>
        <Label>
          <StyledLabel
            theme={
              Object {
                "action": Object {
                  "dark": Object {
                    "RGB": "79,38,98",
                    "hex": "#4E2662",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "173,101,207",
                    "hex": "#AD65CF",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "116,60,143",
                    "hex": "#743C8F",
                    "on": "#FFFFFF",
                  },
                },
                "background": Object {
                  "RGB": "246,246,246",
                  "hex": "#F6F6F6",
                },
                "black": Object {
                  "main": Object {
                    "RGB": "39,39,39",
                    "hex": "#272727",
                    "on": "#FFFFFF",
                  },
                  "tint20": Object {
                    "RGB": "236,236,236",
                    "hex": "#ECECEC",
                    "on": "#272727",
                  },
                  "tint40": Object {
                    "RGB": "199,199,199",
                    "hex": "#C7C7C7",
                    "on": "#272727",
                  },
                  "tint60": Object {
                    "RGB": "160,160,160",
                    "hex": "#A0A0A0",
                    "on": "#FFFFFF",
                  },
                  "tint80": Object {
                    "RGB": "105,105,105",
                    "hex": "#696969",
                    "on": "#FFFFFF",
                  },
                },
                "complimentary": Object {
                  "dark": Object {
                    "RGB": "206,185,0",
                    "hex": "#CEB900",
                    "on": "#272727",
                  },
                  "light": Object {
                    "RGB": "255,245,157",
                    "hex": "#FFF59D",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "255,238,82",
                    "hex": "#FFEE52",
                    "on": "#272727",
                  },
                },
                "error": Object {
                  "dark": Object {
                    "RGB": "197,73,1",
                    "hex": "#C54901",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "255,115,32",
                    "hex": "#FF7320",
                    "on": "#FFFFFF",
                  },
                },
                "primary": Object {
                  "dark": Object {
                    "RGB": "102,22,20",
                    "hex": "#661614",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "218,52,47",
                    "hex": "#DA342F",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "164,40,36",
                    "hex": "#A42824",
                    "on": "#FFFFFF",
                  },
                },
                "secondary": Object {
                  "dark": Object {
                    "RGB": "5,38,59",
                    "hex": "#05263B",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "89,156,175",
                    "hex": "#599CAF",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "11,70,107",
                    "hex": "#0B466B",
                    "on": "#FFFFFF",
                  },
                },
                "surface": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
                "white": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
              }
            }
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "_foldedDefaultProps": Object {
                    "theme": Object {
                      "action": Object {
                        "dark": Object {
                          "RGB": "79,38,98",
                          "hex": "#4E2662",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "173,101,207",
                          "hex": "#AD65CF",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "116,60,143",
                          "hex": "#743C8F",
                          "on": "#FFFFFF",
                        },
                      },
                      "background": Object {
                        "RGB": "246,246,246",
                        "hex": "#F6F6F6",
                      },
                      "black": Object {
                        "main": Object {
                          "RGB": "39,39,39",
                          "hex": "#272727",
                          "on": "#FFFFFF",
                        },
                        "tint20": Object {
                          "RGB": "236,236,236",
                          "hex": "#ECECEC",
                          "on": "#272727",
                        },
                        "tint40": Object {
                          "RGB": "199,199,199",
                          "hex": "#C7C7C7",
                          "on": "#272727",
                        },
                        "tint60": Object {
                          "RGB": "160,160,160",
                          "hex": "#A0A0A0",
                          "on": "#FFFFFF",
                        },
                        "tint80": Object {
                          "RGB": "105,105,105",
                          "hex": "#696969",
                          "on": "#FFFFFF",
                        },
                      },
                      "complimentary": Object {
                        "dark": Object {
                          "RGB": "206,185,0",
                          "hex": "#CEB900",
                          "on": "#272727",
                        },
                        "light": Object {
                          "RGB": "255,245,157",
                          "hex": "#FFF59D",
                          "on": "#272727",
                        },
                        "main": Object {
                          "RGB": "255,238,82",
                          "hex": "#FFEE52",
                          "on": "#272727",
                        },
                      },
                      "error": Object {
                        "dark": Object {
                          "RGB": "197,73,1",
                          "hex": "#C54901",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "255,115,32",
                          "hex": "#FF7320",
                          "on": "#FFFFFF",
                        },
                      },
                      "primary": Object {
                        "dark": Object {
                          "RGB": "102,22,20",
                          "hex": "#661614",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "218,52,47",
                          "hex": "#DA342F",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "164,40,36",
                          "hex": "#A42824",
                          "on": "#FFFFFF",
                        },
                      },
                      "secondary": Object {
                        "dark": Object {
                          "RGB": "5,38,59",
                          "hex": "#05263B",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "89,156,175",
                          "hex": "#599CAF",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "11,70,107",
                          "hex": "#0B466B",
                          "on": "#FFFFFF",
                        },
                      },
                      "surface": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                      "white": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                    },
                  },
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "Label__StyledLabel-b5w2ve-0",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      "display:block;color:",
                      [Function],
                      ";font-size:1rem;font-family:\\"Gentona\\",\\"Montserrat\\";:hover{cursor:pointer;}",
                    ],
                  },
                  "displayName": "StyledLabel",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Label__StyledLabel-b5w2ve-0",
                  "target": "label",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              theme={
                Object {
                  "action": Object {
                    "dark": Object {
                      "RGB": "79,38,98",
                      "hex": "#4E2662",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "173,101,207",
                      "hex": "#AD65CF",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "116,60,143",
                      "hex": "#743C8F",
                      "on": "#FFFFFF",
                    },
                  },
                  "background": Object {
                    "RGB": "246,246,246",
                    "hex": "#F6F6F6",
                  },
                  "black": Object {
                    "main": Object {
                      "RGB": "39,39,39",
                      "hex": "#272727",
                      "on": "#FFFFFF",
                    },
                    "tint20": Object {
                      "RGB": "236,236,236",
                      "hex": "#ECECEC",
                      "on": "#272727",
                    },
                    "tint40": Object {
                      "RGB": "199,199,199",
                      "hex": "#C7C7C7",
                      "on": "#272727",
                    },
                    "tint60": Object {
                      "RGB": "160,160,160",
                      "hex": "#A0A0A0",
                      "on": "#FFFFFF",
                    },
                    "tint80": Object {
                      "RGB": "105,105,105",
                      "hex": "#696969",
                      "on": "#FFFFFF",
                    },
                  },
                  "complimentary": Object {
                    "dark": Object {
                      "RGB": "206,185,0",
                      "hex": "#CEB900",
                      "on": "#272727",
                    },
                    "light": Object {
                      "RGB": "255,245,157",
                      "hex": "#FFF59D",
                      "on": "#272727",
                    },
                    "main": Object {
                      "RGB": "255,238,82",
                      "hex": "#FFEE52",
                      "on": "#272727",
                    },
                  },
                  "error": Object {
                    "dark": Object {
                      "RGB": "197,73,1",
                      "hex": "#C54901",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "255,115,32",
                      "hex": "#FF7320",
                      "on": "#FFFFFF",
                    },
                  },
                  "primary": Object {
                    "dark": Object {
                      "RGB": "102,22,20",
                      "hex": "#661614",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "218,52,47",
                      "hex": "#DA342F",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "164,40,36",
                      "hex": "#A42824",
                      "on": "#FFFFFF",
                    },
                  },
                  "secondary": Object {
                    "dark": Object {
                      "RGB": "5,38,59",
                      "hex": "#05263B",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "89,156,175",
                      "hex": "#599CAF",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "11,70,107",
                      "hex": "#0B466B",
                      "on": "#FFFFFF",
                    },
                  },
                  "surface": Object {
                    "RGB": "255,255,255",
                    "hex": "#FFFFFF",
                    "on": "#272727",
                  },
                  "white": Object {
                    "RGB": "255,255,255",
                    "hex": "#FFFFFF",
                    "on": "#272727",
                  },
                }
              }
            >
              <label
                className="c2"
              />
            </StyledComponent>
          </StyledLabel>
        </Label>
      </div>
    </StyledComponent>
  </Container>
</FormRadio>
`;

exports[`FormRadio Input test match last snapshot of <FormRadio /> with ThemeProvider 1`] = `
.c2 {
  display: block;
  color: #272727;
  font-size: 1rem;
  font-family: "Gentona","Montserrat";
}

.c2:hover {
  cursor: pointer;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-shadow: none;
  border: 2px solid #0B466B;
  outline: none;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 50%;
  -webkit-transition: 0.3s ease all;
  transition: 0.3s ease all;
}

.c1:hover {
  border-color: #05263B;
  cursor: pointer;
}

.c1:focus,
.c1:checked,
.c1:active {
  border-color: #05263B;
  background-color: #05263B;
}

.c1:focus + label,
.c1:checked + label,
.c1:active + label {
  font-weight: bold;
  color: #05263B;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: no-wrap;
  -ms-flex-wrap: no-wrap;
  flex-wrap: no-wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > input {
  margin-right: 0.5rem;
}

<FormRadio
  row={true}
>
  <Container
    row={true}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "FormRadio__Container-sc-16fxvar-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "display:flex;flex-wrap:no-wrap;flex-direction:",
              [Function],
              ";justify-content:center;align-items:center;> input{",
              [Function],
              "}",
            ],
          },
          "displayName": "Container",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "FormRadio__Container-sc-16fxvar-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      row={true}
    >
      <div
        className="c0"
      >
        <Radio>
          <StyledRadio
            theme={
              Object {
                "action": Object {
                  "dark": Object {
                    "RGB": "79,38,98",
                    "hex": "#4E2662",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "173,101,207",
                    "hex": "#AD65CF",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "116,60,143",
                    "hex": "#743C8F",
                    "on": "#FFFFFF",
                  },
                },
                "background": Object {
                  "RGB": "246,246,246",
                  "hex": "#F6F6F6",
                },
                "black": Object {
                  "main": Object {
                    "RGB": "39,39,39",
                    "hex": "#272727",
                    "on": "#FFFFFF",
                  },
                  "tint20": Object {
                    "RGB": "236,236,236",
                    "hex": "#ECECEC",
                    "on": "#272727",
                  },
                  "tint40": Object {
                    "RGB": "199,199,199",
                    "hex": "#C7C7C7",
                    "on": "#272727",
                  },
                  "tint60": Object {
                    "RGB": "160,160,160",
                    "hex": "#A0A0A0",
                    "on": "#FFFFFF",
                  },
                  "tint80": Object {
                    "RGB": "105,105,105",
                    "hex": "#696969",
                    "on": "#FFFFFF",
                  },
                },
                "complimentary": Object {
                  "dark": Object {
                    "RGB": "206,185,0",
                    "hex": "#CEB900",
                    "on": "#272727",
                  },
                  "light": Object {
                    "RGB": "255,245,157",
                    "hex": "#FFF59D",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "255,238,82",
                    "hex": "#FFEE52",
                    "on": "#272727",
                  },
                },
                "error": Object {
                  "dark": Object {
                    "RGB": "197,73,1",
                    "hex": "#C54901",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "255,115,32",
                    "hex": "#FF7320",
                    "on": "#FFFFFF",
                  },
                },
                "primary": Object {
                  "dark": Object {
                    "RGB": "102,22,20",
                    "hex": "#661614",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "218,52,47",
                    "hex": "#DA342F",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "164,40,36",
                    "hex": "#A42824",
                    "on": "#FFFFFF",
                  },
                },
                "secondary": Object {
                  "dark": Object {
                    "RGB": "5,38,59",
                    "hex": "#05263B",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "89,156,175",
                    "hex": "#599CAF",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "11,70,107",
                    "hex": "#0B466B",
                    "on": "#FFFFFF",
                  },
                },
                "surface": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
                "white": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
              }
            }
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "_foldedDefaultProps": Object {
                    "theme": Object {
                      "action": Object {
                        "dark": Object {
                          "RGB": "79,38,98",
                          "hex": "#4E2662",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "173,101,207",
                          "hex": "#AD65CF",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "116,60,143",
                          "hex": "#743C8F",
                          "on": "#FFFFFF",
                        },
                      },
                      "background": Object {
                        "RGB": "246,246,246",
                        "hex": "#F6F6F6",
                      },
                      "black": Object {
                        "main": Object {
                          "RGB": "39,39,39",
                          "hex": "#272727",
                          "on": "#FFFFFF",
                        },
                        "tint20": Object {
                          "RGB": "236,236,236",
                          "hex": "#ECECEC",
                          "on": "#272727",
                        },
                        "tint40": Object {
                          "RGB": "199,199,199",
                          "hex": "#C7C7C7",
                          "on": "#272727",
                        },
                        "tint60": Object {
                          "RGB": "160,160,160",
                          "hex": "#A0A0A0",
                          "on": "#FFFFFF",
                        },
                        "tint80": Object {
                          "RGB": "105,105,105",
                          "hex": "#696969",
                          "on": "#FFFFFF",
                        },
                      },
                      "complimentary": Object {
                        "dark": Object {
                          "RGB": "206,185,0",
                          "hex": "#CEB900",
                          "on": "#272727",
                        },
                        "light": Object {
                          "RGB": "255,245,157",
                          "hex": "#FFF59D",
                          "on": "#272727",
                        },
                        "main": Object {
                          "RGB": "255,238,82",
                          "hex": "#FFEE52",
                          "on": "#272727",
                        },
                      },
                      "error": Object {
                        "dark": Object {
                          "RGB": "197,73,1",
                          "hex": "#C54901",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "255,115,32",
                          "hex": "#FF7320",
                          "on": "#FFFFFF",
                        },
                      },
                      "primary": Object {
                        "dark": Object {
                          "RGB": "102,22,20",
                          "hex": "#661614",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "218,52,47",
                          "hex": "#DA342F",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "164,40,36",
                          "hex": "#A42824",
                          "on": "#FFFFFF",
                        },
                      },
                      "secondary": Object {
                        "dark": Object {
                          "RGB": "5,38,59",
                          "hex": "#05263B",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "89,156,175",
                          "hex": "#599CAF",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "11,70,107",
                          "hex": "#0B466B",
                          "on": "#FFFFFF",
                        },
                      },
                      "surface": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                      "white": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                    },
                  },
                  "attrs": Array [
                    Object {
                      "type": "radio",
                    },
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "Radio__StyledRadio-sc-1037grk-0",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      "appearance:none;box-shadow:none;border:2px solid ",
                      [Function],
                      ";outline:none;width:1.5rem;height:1.5rem;border-radius:50%;transition:0.3s ease all;:hover{border-color:",
                      [Function],
                      ";cursor:pointer;}:focus,:checked,:active{border-color:",
                      [Function],
                      ";background-color:",
                      [Function],
                      ";+ label{font-weight:bold;color:",
                      [Function],
                      ";}}",
                    ],
                  },
                  "displayName": "StyledRadio",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Radio__StyledRadio-sc-1037grk-0",
                  "target": "input",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              theme={
                Object {
                  "action": Object {
                    "dark": Object {
                      "RGB": "79,38,98",
                      "hex": "#4E2662",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "173,101,207",
                      "hex": "#AD65CF",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "116,60,143",
                      "hex": "#743C8F",
                      "on": "#FFFFFF",
                    },
                  },
                  "background": Object {
                    "RGB": "246,246,246",
                    "hex": "#F6F6F6",
                  },
                  "black": Object {
                    "main": Object {
                      "RGB": "39,39,39",
                      "hex": "#272727",
                      "on": "#FFFFFF",
                    },
                    "tint20": Object {
                      "RGB": "236,236,236",
                      "hex": "#ECECEC",
                      "on": "#272727",
                    },
                    "tint40": Object {
                      "RGB": "199,199,199",
                      "hex": "#C7C7C7",
                      "on": "#272727",
                    },
                    "tint60": Object {
                      "RGB": "160,160,160",
                      "hex": "#A0A0A0",
                      "on": "#FFFFFF",
                    },
                    "tint80": Object {
                      "RGB": "105,105,105",
                      "hex": "#696969",
                      "on": "#FFFFFF",
                    },
                  },
                  "complimentary": Object {
                    "dark": Object {
                      "RGB": "206,185,0",
                      "hex": "#CEB900",
                      "on": "#272727",
                    },
                    "light": Object {
                      "RGB": "255,245,157",
                      "hex": "#FFF59D",
                      "on": "#272727",
                    },
                    "main": Object {
                      "RGB": "255,238,82",
                      "hex": "#FFEE52",
                      "on": "#272727",
                    },
                  },
                  "error": Object {
                    "dark": Object {
                      "RGB": "197,73,1",
                      "hex": "#C54901",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "255,115,32",
                      "hex": "#FF7320",
                      "on": "#FFFFFF",
                    },
                  },
                  "primary": Object {
                    "dark": Object {
                      "RGB": "102,22,20",
                      "hex": "#661614",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "218,52,47",
                      "hex": "#DA342F",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "164,40,36",
                      "hex": "#A42824",
                      "on": "#FFFFFF",
                    },
                  },
                  "secondary": Object {
                    "dark": Object {
                      "RGB": "5,38,59",
                      "hex": "#05263B",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "89,156,175",
                      "hex": "#599CAF",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "11,70,107",
                      "hex": "#0B466B",
                      "on": "#FFFFFF",
                    },
                  },
                  "surface": Object {
                    "RGB": "255,255,255",
                    "hex": "#FFFFFF",
                    "on": "#272727",
                  },
                  "white": Object {
                    "RGB": "255,255,255",
                    "hex": "#FFFFFF",
                    "on": "#272727",
                  },
                }
              }
            >
              <input
                className="c1"
                type="radio"
              />
            </StyledComponent>
          </StyledRadio>
        </Radio>
        <Label>
          <StyledLabel
            theme={
              Object {
                "action": Object {
                  "dark": Object {
                    "RGB": "79,38,98",
                    "hex": "#4E2662",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "173,101,207",
                    "hex": "#AD65CF",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "116,60,143",
                    "hex": "#743C8F",
                    "on": "#FFFFFF",
                  },
                },
                "background": Object {
                  "RGB": "246,246,246",
                  "hex": "#F6F6F6",
                },
                "black": Object {
                  "main": Object {
                    "RGB": "39,39,39",
                    "hex": "#272727",
                    "on": "#FFFFFF",
                  },
                  "tint20": Object {
                    "RGB": "236,236,236",
                    "hex": "#ECECEC",
                    "on": "#272727",
                  },
                  "tint40": Object {
                    "RGB": "199,199,199",
                    "hex": "#C7C7C7",
                    "on": "#272727",
                  },
                  "tint60": Object {
                    "RGB": "160,160,160",
                    "hex": "#A0A0A0",
                    "on": "#FFFFFF",
                  },
                  "tint80": Object {
                    "RGB": "105,105,105",
                    "hex": "#696969",
                    "on": "#FFFFFF",
                  },
                },
                "complimentary": Object {
                  "dark": Object {
                    "RGB": "206,185,0",
                    "hex": "#CEB900",
                    "on": "#272727",
                  },
                  "light": Object {
                    "RGB": "255,245,157",
                    "hex": "#FFF59D",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "255,238,82",
                    "hex": "#FFEE52",
                    "on": "#272727",
                  },
                },
                "error": Object {
                  "dark": Object {
                    "RGB": "197,73,1",
                    "hex": "#C54901",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "255,115,32",
                    "hex": "#FF7320",
                    "on": "#FFFFFF",
                  },
                },
                "primary": Object {
                  "dark": Object {
                    "RGB": "102,22,20",
                    "hex": "#661614",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "218,52,47",
                    "hex": "#DA342F",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "164,40,36",
                    "hex": "#A42824",
                    "on": "#FFFFFF",
                  },
                },
                "secondary": Object {
                  "dark": Object {
                    "RGB": "5,38,59",
                    "hex": "#05263B",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "89,156,175",
                    "hex": "#599CAF",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "11,70,107",
                    "hex": "#0B466B",
                    "on": "#FFFFFF",
                  },
                },
                "surface": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
                "white": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
              }
            }
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "_foldedDefaultProps": Object {
                    "theme": Object {
                      "action": Object {
                        "dark": Object {
                          "RGB": "79,38,98",
                          "hex": "#4E2662",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "173,101,207",
                          "hex": "#AD65CF",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "116,60,143",
                          "hex": "#743C8F",
                          "on": "#FFFFFF",
                        },
                      },
                      "background": Object {
                        "RGB": "246,246,246",
                        "hex": "#F6F6F6",
                      },
                      "black": Object {
                        "main": Object {
                          "RGB": "39,39,39",
                          "hex": "#272727",
                          "on": "#FFFFFF",
                        },
                        "tint20": Object {
                          "RGB": "236,236,236",
                          "hex": "#ECECEC",
                          "on": "#272727",
                        },
                        "tint40": Object {
                          "RGB": "199,199,199",
                          "hex": "#C7C7C7",
                          "on": "#272727",
                        },
                        "tint60": Object {
                          "RGB": "160,160,160",
                          "hex": "#A0A0A0",
                          "on": "#FFFFFF",
                        },
                        "tint80": Object {
                          "RGB": "105,105,105",
                          "hex": "#696969",
                          "on": "#FFFFFF",
                        },
                      },
                      "complimentary": Object {
                        "dark": Object {
                          "RGB": "206,185,0",
                          "hex": "#CEB900",
                          "on": "#272727",
                        },
                        "light": Object {
                          "RGB": "255,245,157",
                          "hex": "#FFF59D",
                          "on": "#272727",
                        },
                        "main": Object {
                          "RGB": "255,238,82",
                          "hex": "#FFEE52",
                          "on": "#272727",
                        },
                      },
                      "error": Object {
                        "dark": Object {
                          "RGB": "197,73,1",
                          "hex": "#C54901",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "255,115,32",
                          "hex": "#FF7320",
                          "on": "#FFFFFF",
                        },
                      },
                      "primary": Object {
                        "dark": Object {
                          "RGB": "102,22,20",
                          "hex": "#661614",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "218,52,47",
                          "hex": "#DA342F",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "164,40,36",
                          "hex": "#A42824",
                          "on": "#FFFFFF",
                        },
                      },
                      "secondary": Object {
                        "dark": Object {
                          "RGB": "5,38,59",
                          "hex": "#05263B",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "89,156,175",
                          "hex": "#599CAF",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "11,70,107",
                          "hex": "#0B466B",
                          "on": "#FFFFFF",
                        },
                      },
                      "surface": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                      "white": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                    },
                  },
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "Label__StyledLabel-b5w2ve-0",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      "display:block;color:",
                      [Function],
                      ";font-size:1rem;font-family:\\"Gentona\\",\\"Montserrat\\";:hover{cursor:pointer;}",
                    ],
                  },
                  "displayName": "StyledLabel",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Label__StyledLabel-b5w2ve-0",
                  "target": "label",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              theme={
                Object {
                  "action": Object {
                    "dark": Object {
                      "RGB": "79,38,98",
                      "hex": "#4E2662",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "173,101,207",
                      "hex": "#AD65CF",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "116,60,143",
                      "hex": "#743C8F",
                      "on": "#FFFFFF",
                    },
                  },
                  "background": Object {
                    "RGB": "246,246,246",
                    "hex": "#F6F6F6",
                  },
                  "black": Object {
                    "main": Object {
                      "RGB": "39,39,39",
                      "hex": "#272727",
                      "on": "#FFFFFF",
                    },
                    "tint20": Object {
                      "RGB": "236,236,236",
                      "hex": "#ECECEC",
                      "on": "#272727",
                    },
                    "tint40": Object {
                      "RGB": "199,199,199",
                      "hex": "#C7C7C7",
                      "on": "#272727",
                    },
                    "tint60": Object {
                      "RGB": "160,160,160",
                      "hex": "#A0A0A0",
                      "on": "#FFFFFF",
                    },
                    "tint80": Object {
                      "RGB": "105,105,105",
                      "hex": "#696969",
                      "on": "#FFFFFF",
                    },
                  },
                  "complimentary": Object {
                    "dark": Object {
                      "RGB": "206,185,0",
                      "hex": "#CEB900",
                      "on": "#272727",
                    },
                    "light": Object {
                      "RGB": "255,245,157",
                      "hex": "#FFF59D",
                      "on": "#272727",
                    },
                    "main": Object {
                      "RGB": "255,238,82",
                      "hex": "#FFEE52",
                      "on": "#272727",
                    },
                  },
                  "error": Object {
                    "dark": Object {
                      "RGB": "197,73,1",
                      "hex": "#C54901",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "255,115,32",
                      "hex": "#FF7320",
                      "on": "#FFFFFF",
                    },
                  },
                  "primary": Object {
                    "dark": Object {
                      "RGB": "102,22,20",
                      "hex": "#661614",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "218,52,47",
                      "hex": "#DA342F",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "164,40,36",
                      "hex": "#A42824",
                      "on": "#FFFFFF",
                    },
                  },
                  "secondary": Object {
                    "dark": Object {
                      "RGB": "5,38,59",
                      "hex": "#05263B",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "89,156,175",
                      "hex": "#599CAF",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "11,70,107",
                      "hex": "#0B466B",
                      "on": "#FFFFFF",
                    },
                  },
                  "surface": Object {
                    "RGB": "255,255,255",
                    "hex": "#FFFFFF",
                    "on": "#272727",
                  },
                  "white": Object {
                    "RGB": "255,255,255",
                    "hex": "#FFFFFF",
                    "on": "#272727",
                  },
                }
              }
            >
              <label
                className="c2"
              />
            </StyledComponent>
          </StyledLabel>
        </Label>
      </div>
    </StyledComponent>
  </Container>
</FormRadio>
`;
